--- a/src/styles.css
+++ b/src/styles.css
@@ -164,8 +164,8 @@ input {
       margin: 0;
   }
     .btn {
-      font-size: 14px;
-      padding-right: 3px;
+      font-size: 16px;
+      padding-right: 0;
       padding-left: 0:
     }
   }
